* Tue Aug 23 2011 Thunor <thunorsif@hotmail.com>
- Modified icon from theme code so that a gtk-missing-image is shown
  when an image isn't found, similar to the image from file code.
- Tweaked the button image loading code to better accommodate the
  togglebutton's <input> directive.
- Added support for the save action function to the togglebutton widget.

* Mon Aug 22 2011 Thunor <thunorsif@hotmail.com>
- New widget: <togglebutton>.
- Purged almost all of the code marked redundant.
- Added widget_template.c/h which I've been using for a while now.

* Sun Aug 21 2011 Thunor <thunorsif@hotmail.com>
- Fixed invisible-char in 02.01-entry_attributes as it is a guint not a
  gchar (it worked before because the guint code was bugged).
- Updated a few examples by replacing deprecated directives.

* Sat Aug 20 2011 Thunor <thunorsif@hotmail.com>
- Added signals.c/h.

* Fri Aug 19 2011 Thunor <thunorsif@hotmail.com>
- Started to implement the togglebutton widget (create works so far).
- Fixed a bug when freeing accel_groups: it needed to be set to NULL.

* Thu Aug 18 2011 Thunor <thunorsif@hotmail.com>
- Added widget_button.c/h.
- Added "use-underline" support to buttons with a label directive.

* Wed Aug 17 2011 Thunor <thunorsif@hotmail.com>
- Added "tab-prefix", "tab-suffix" and "tab-base-index" custom tag
  attributes to the notebook widget to control automated page labelling.
  I've also added "tab-labels" to replace the existing "labels".

* Tue Aug 16 2011 Thunor <thunorsif@hotmail.com>
- Re-engineered a few functions within attributes.c that needed to be
  reentrant but weren't. The pointer being used to record the currently
  referenced element in an AttributeSet (a GList) was being stored within
  the AttributeSet when it should have been stored within the calling
  function. For example, clicking a button on a notebook page would emit
  a signal and an action would change the page, then GTK+ would hide the